cursory_analysis.ipynb

--- a/cursory_analysis.ipynb
+++ b/cursory_analysis.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -22,15 +22,27 @@
    ],
    "source": [
     "status = 'Roll Tide!'\n",
-    "print(status)"
+    "print(status)\n",
+    "\n",
+    "chocolates = 'life'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "life\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(chocolates)"
+   ]
   }
  ],
  "metadata": {
